# prefect-local

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
docker/runner/: Dockerfile
runner/: main.py  runner.example.toml
scripts-example/: example.py  runner.example.toml
